modules/vpc/vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr_block
  instance_tenancy = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
      {
        Name        = var.name,
        Project     = var.project,
        Environment = var.environment
      },
      var.tags
    )
}
